--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "atoms-koatool",
-  "version": "0.0.1-alpha.11",
+  "version": "0.0.1-alpha.14",
   "description": "Providing HTTP Tool using Koa as AtomServices Tool",
   "main": "./dst/index.js",
   "typings": "./typings/index.d.ts",
@@ -17,27 +17,32 @@
     "test-all": "npm run test-mocha",
     "test-all-cvr": "npm run test-mocha-cvr",
     "test-mocha": "mocha test --recursive",
-    "test-mocha-cvr": "nyc mocha test --recursive"
+    "test-mocha-cvr": "nyc mocha test --recursive",
+    "coverage": "npm run coveralls",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "cix-lic": "cix-lic --conf"
   },
   "author": "Architecode Corporation",
   "license": "MIT",
   "repository": "git+https://github.com/atomecos/atoms-koatool",
   "dependencies": {
-    "atoms-httpcore": "0.0.1-alpha.11",
-    "atomservicescore": "0.1.0-alpha.19",
+    "atoms-httpcore": "0.0.1-alpha.14",
+    "atomservicescore": "0.1.0-alpha.30",
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0"
   },
   "devDependencies": {
     "@types/koa": "^2.0.44",
     "@types/koa-bodyparser": "^4.2.0",
-    "@types/node": "^9.4.4",
+    "@types/node": "^9.4.5",
     "chai": "^4.1.2",
+    "cix-lic": "^2.0.5",
+    "coveralls": "^3.0.0",
     "mocha": "^5.0.0",
     "mock-require": "^3.0.1",
     "nyc": "^11.4.1",
     "shelljs": "^0.8.1",
-    "sinon": "^5.0.0",
+    "sinon": "^4.3.0",
     "tslint": "^5.9.1",
     "typescript": "^2.7.1"
   }
